<resources>
    <string name="app_name">UNO-Test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_Register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="Signup">Sign up</string>
    <string name="action_logout">Log Out</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="gamefrag">GoToGameFrag</string>

</resources>